Debug test improvement + docs